refactor: refatorando projeto com completo
